spring-boot/platform-http/src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: platform-http
    app.kubernetes.io/runtime: camel
  name: platform-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: platform-http
  type: ClusterIP
